# regex-genex

./: cabal.project  regex-genex.cabal  stack.yaml
src/Regex/: Genex.hs
src/Regex/Genex/: Pure.hs
src/Test/QuickCheck/: Regex.hs
