Name            : regex-genex
Version         : 0.7.0
license         : OtherLicense
license-file    : LICENSE
cabal-version   : >= 1.6
copyright       : 2011-2015 Audrey Tang
maintainer      : Audrey Tang <audreyt@audreyt.org>
category        : Text, Regex
stability       : experimental
build-type      : Simple
homepage        : https://github.com/audreyt/regex-genex
synopsis        : From a regex, generate all possible strings it can match
description     : From a regex, generate all possible strings it can match
author          : Audrey Tang <audreyt@audreyt.org>
Tested-With:    GHC==7.10.1

library
    hs-source-dirs:     . src
    exposed-modules:    Regex.Genex Regex.Genex.Normalize Test.QuickCheck.Regex
    other-modules:    Regex.Genex.Pure
    extensions      : ImplicitParams, NamedFieldPuns, ParallelListComp, PatternGuards, RecordWildCards
    build-depends:
        base >= 3 && < 5, mtl, containers, sbv, regex-tdfa, stream-monad == 0.4.0.3, text, logict

executable genex
    main-is:            Main.hs
    hs-source-dirs:     . src
    other-modules:    Regex.Genex Regex.Genex.Normalize Regex.Genex.Pure Test.QuickCheck.Regex
    extensions      : ImplicitParams, NamedFieldPuns, ParallelListComp, PatternGuards, RecordWildCards
    build-depends:
        base >= 3 && < 5, mtl, containers, sbv, regex-tdfa, QuickCheck

source-repository head
  type:     git
  location: http://github.com/audreyt/regex-genex
